fix: adjusting z-index in mobile menu

--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ nav.show .menu {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 9999;
 }
 
 nav.show .menu > div {
